<resources>
    <string name="app_name">Book</string>
    <string name="opening">Open</string>
    <string name="closing">Closing</string>
    <string name="feedback">Feed Back</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="comic">Comic</string>
    <string name="developer">Developer</string>
    <string name="romantic">Romantic</string>
    <string name="detective">Detective</string>
    <string name="buy">Buy</string>
    <string name="read">Read</string>
    <string name="detail">Detail Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
