<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Book_Infomation">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:background="@color/blue"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"/>
            <ImageView
                android:layout_margin="7dp"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/image_info"
                android:layout_row="1"
                android:layout_column="0"
                android:src="@drawable/alldoom"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_column="1"
                android:layout_row="1">
                <TextView
                    android:textColor="@color/text"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:id="@+id/title_info"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:text="@string/comic" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">
                    <Button
                        android:background="@drawable/bt_shape"
                        android:id="@+id/buy_info"
                        android:layout_marginTop="15dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy"/>
                    <Button
                        android:background="@drawable/bt_shape"
                        android:shadowRadius="10"
                        style="?attr/buttonStyle"
                        android:id="@+id/read_info"
                        android:layout_margin="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/read"/>
                </LinearLayout>
            </LinearLayout>
            <CheckBox
                android:layout_margin="10dp"
                android:layout_column="0"
                android:layout_row="1"
                android:onClick="actionFavorite"
                android:id="@+id/abc"
                android:button="@null"
                android:background="@drawable/favorite_selector" />


            <TextView
                android:textSize="10sp"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:id="@+id/context_info"
                android:layout_column="0"
                android:layout_row="2"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_vertical"
                android:layout_width="match_parent"/>
        </GridLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>